updated in lecture 96

--- a/views/v_admin/index.ejs
+++ b/views/v_admin/index.ejs
@@ -1,2 +1,6 @@
 <% include ../layouts/admin/header %>  
+<div class="container">
+    <h1 class="">Index Page</h1>  
+   
+</div>
 <% include ../layouts/admin/footer %>  
