--- a/views/layouts/admin/header.ejs
+++ b/views/layouts/admin/header.ejs
@@ -18,7 +18,7 @@
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
   <!-- Navigation-->
-  <% include ../partials/admin/sidenav %>  
+  <% include ../../partials/admin/sidenav %>  
   <!--end nav-->
 
   <div class="content-wrapper">
@@ -32,8 +32,8 @@
       </ol>
       <div class="row">
         <div class="col-12">
-          <h1>Blank</h1>
-          <p>This is an example of a blank page that you can use as a starting point for creating new ones.</p>
+          <!-- <h1>Blank</h1>
+          <p>This is an example of a blank page that you can use as a starting point for creating new ones.</p> -->
         </div>
       </div>
     </div>
