finish section 11, but helper function is not finished

--- a/views/v_admin/posts/create.ejs
+++ b/views/v_admin/posts/create.ejs
@@ -14,7 +14,7 @@
                             <option value="draft">draft</option>
                         </select>
                     </div>
-                <div class="form-check">
+                <div class="form-check-label">
                     <label for="">
                         <input type="checkbox" name="allowComments" class="form-check-input" id="allowComments" placeholder="">
                         Allow Comments
