--- a/views/v_admin/index.ejs
+++ b/views/v_admin/index.ejs
@@ -1,6 +1,13 @@
 <% include ../layouts/admin/header %>  
 <div class="container">
-    <h1 class="">Index Page</h1>  
-   
+        <form action="/admin/generate-fake-posts" method="POST">
+            <h1>Create Post</h1>
+            <div class="form-group">
+                <input type="text" name="amount" class="form-control">
+            </div>
+             <div class="form-group">
+                <button type="submit">Create</button>
+            </div>
+        </form>
 </div>
 <% include ../layouts/admin/footer %>  
