--- a/views/v_admin/posts/edit.ejs
+++ b/views/v_admin/posts/edit.ejs
@@ -1,7 +1,7 @@
 <% include ../../layouts/admin/header %> 
     <div class="container">
             <h1>Edit Post</h1>
-            <form action="/admin/posts/edit" method="POST">
+            <form action="/admin/posts/edit/<%= edit_posts._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <label for="">Title</label>
                     <input type="text" name="title" class="form-control" value="<%= edit_posts.title %>" placeholder="Enter title">
@@ -14,15 +14,15 @@
                             <option value="draft">draft</option>
                         </select>
                     </div>
-                <div class="form-check">
+                <div class="form-check-label">
                     <label for="">
-                        <input type="checkbox" name="allowComments" class="form-check-input" id="allowComments" <% if(edit_posts.allowComments ) { %> checked="checked" <% }; %> placeholder="">
+                        <input type="checkbox" value="<%= edit_posts.allowComments %>" name="allowComments" class="form-check-input" id="allowComments" <% if(edit_posts.allowComments ) { %> checked="checked" <% }; %> placeholder="">
                         Allow Comments
                     </label>
                 </div>
                 <div class="form-group">
                         <label for="">Body</label>
-                        <textarea name="body" id="body" cols="30" rows="10" class="form-control"  placeholder="<%= edit_posts.body %>"></textarea>
+                        <textarea name="body" id="body" cols="30" rows="10" value="<%= edit_posts.body %>" class="form-control"  placeholder="<%= edit_posts.body %>"></textarea>
                 </div>
                 <div class="form-group">
                         <button type="submit" class="btn btn-primary">Submit</button>
