--- a/views/v_admin/posts/index.ejs
+++ b/views/v_admin/posts/index.ejs
@@ -20,7 +20,11 @@
                 <td><%= hasil.status%> </td>
                 <td><%= hasil.allowComments %></td>
                 <td><%= hasil.body%></td>
-                <td><a href="/admin/posts/edit/<%= hasil.id %>" class="btn btn-info btn-sm">Edit</a> | <a href="" class="btn btn-danger btn-sm">Delete</a></td>
+                <td><a href="/admin/posts/edit/<%= hasil.id %>" class="btn btn-info btn-sm">Edit</a> | 
+                    <form action="/admin/posts/<%= hasil.id %>?_method=DELETE" method="POST">
+                        <button type="submit" class="btn btn-danger btn-sm" >Delete</button>
+                    </form>
+                </td>
             </tr>
         <% }); %>
         </tbody>
