--- a/views/v_admin/posts/index.ejs
+++ b/views/v_admin/posts/index.ejs
@@ -6,6 +6,7 @@
             <tr>
                 <th>Id</th>
                 <th>Title</th>
+                <th>Image</th>
                 <th>Status</th>
                 <th>Allow Comments</th>
                 <th>Body</th>
@@ -16,6 +17,7 @@
          <% result_posts.forEach(function(hasil){ %>
             <tr>
                 <td><%= hasil.id %></td>
+                <td><img class="img-responsive" src="/uploads/<%= hasil.file %>" height="50"></td>
                 <td><%= hasil.title %></td>
                 <td><%= hasil.status%> </td>
                 <td><%= hasil.allowComments %></td>
