--- a/views/v_admin/posts/create.ejs
+++ b/views/v_admin/posts/create.ejs
@@ -1,10 +1,14 @@
 <% include ../../layouts/admin/header %> 
     <div class="container">
             <h1>Create Post</h1>
-            <form action="/admin/posts/create" method="POST">
+            <form action="/admin/posts/create" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="">Title</label>
                     <input type="text" name="title" class="form-control" placeholder="Enter title">
+                </div>
+                <div class="form-group">
+                        <label for="">Upload File</label>
+                        <input type="file" name="file" class="form-control">
                 </div>
                 <div class="form-group">
                         <label for="">Status</label>
