--- a/views/v_admin/posts/create.ejs
+++ b/views/v_admin/posts/create.ejs
@@ -1,14 +1,18 @@
 <% include ../../layouts/admin/header %> 
     <div class="container">
             <h1>Create Post</h1>
+                <div class="alert alert-danger">
+                        
+                </div>
+           
             <form action="/admin/posts/create" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="">Title</label>
-                    <input type="text" name="title" class="form-control" placeholder="Enter title">
+                    <input  type="text" name="title" class="form-control" placeholder="Enter title" required>
                 </div>
                 <div class="form-group">
                         <label for="">Upload File</label>
-                        <input type="file" name="file" class="form-control">
+                        <input type="file" name="file" class="form-control" required>
                 </div>
                 <div class="form-group">
                         <label for="">Status</label>
@@ -26,7 +30,7 @@
                 </div>
                 <div class="form-group">
                         <label for="">Body</label>
-                        <textarea name="body" id="body" cols="30" rows="10" class="form-control" placeholder="Enter Description"></textarea>
+                        <textarea name="body" id="body" cols="30" rows="10" class="form-control" placeholder="Enter Description" required></textarea>
                 </div>
                 <div class="form-group">
                         <button type="submit" class="btn btn-primary">Submit</button>
