--- a/views/layouts/admin/header.ejs
+++ b/views/layouts/admin/header.ejs
@@ -23,15 +23,12 @@
 
   <div class="content-wrapper">
     <div class="container-fluid">
-      <!-- Breadcrumbs-->
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">Dashboard</a>
-        </li>
-        <li class="breadcrumb-item active">Blank Page</li>
-      </ol>
+      
       <div class="row">
         <div class="col-12">
+          <% if (success && success.length > 0) { %>
+              <div class="alert alert-success" role="alert"><%= success %></div>
+          <% } %>
           <!-- <h1>Blank</h1>
           <p>This is an example of a blank page that you can use as a starting point for creating new ones.</p> -->
         </div>
