--- a/views/v_admin/index.ejs
+++ b/views/v_admin/index.ejs
@@ -1,12 +1,12 @@
 <% include ../layouts/admin/header %>  
 <div class="container">
         <form action="/admin/generate-fake-posts" method="POST">
-            <h1>Create Post</h1>
+            <h1>Generate Create Post</h1>
             <div class="form-group">
                 <input type="text" name="amount" class="form-control">
             </div>
              <div class="form-group">
-                <button type="submit">Create</button>
+                <button type="submit" class="btn btn-dark">Generate Post</button>
             </div>
         </form>
 </div>
