--- a/views/v_admin/posts/create.ejs
+++ b/views/v_admin/posts/create.ejs
@@ -2,7 +2,7 @@
     <div class="container">
             <h1>Create Post</h1>
                 <div class="alert alert-danger">
-                        
+                    
                 </div>
            
             <form action="/admin/posts/create" method="POST" enctype="multipart/form-data">
@@ -33,7 +33,7 @@
                         <textarea name="body" id="body" cols="30" rows="10" class="form-control" placeholder="Enter Description" required></textarea>
                 </div>
                 <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Create Post</button>
                 </div>
             </form>
     </div>
