--- a/views/v_admin/posts/edit.ejs
+++ b/views/v_admin/posts/edit.ejs
@@ -1,10 +1,14 @@
 <% include ../../layouts/admin/header %> 
     <div class="container">
             <h1>Edit Post</h1>
-            <form action="/admin/posts/edit/<%= edit_posts._id %>?_method=PUT" method="POST">
+            <form action="/admin/posts/edit/<%= edit_posts._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="">Title</label>
                     <input type="text" name="title" class="form-control" value="<%= edit_posts.title %>" placeholder="Enter title">
+                </div>
+                <div class="form-group">
+                        <label for="">Upload File</label>
+                        <input type="file" name="file" class="form-control" required>
                 </div>
                 <div class="form-group">
                         <label for="">Status</label>
@@ -25,7 +29,7 @@
                         <textarea name="body" id="body" cols="30" rows="10" value="<%= edit_posts.body %>" class="form-control"  placeholder="<%= edit_posts.body %>"></textarea>
                 </div>
                 <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Update Post</button>
                 </div>
             </form>
     </div>
