--- a/views/v_admin/posts/index.ejs
+++ b/views/v_admin/posts/index.ejs
@@ -11,6 +11,7 @@
                 <th>Status</th>
                 <th>Allow Comments</th>
                 <th>Body</th>
+                <th>Date</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -23,6 +24,7 @@
                 <td><%= hasil.status%> </td>
                 <td><%= hasil.allowComments %></td>
                 <td><%= hasil.body%></td>
+                <td><%= generateTime hasil.date 'MMMM Do YYYY' %></td>
                 <td><a href="/admin/posts/edit/<%= hasil.id %>" class="btn btn-info btn-sm">Edit</a> | 
                     <form action="/admin/posts/<%= hasil.id %>?_method=DELETE" method="POST">
                         <button type="submit" class="btn btn-danger btn-sm" >Delete</button>
