--- a/views/v_admin/posts/index.ejs
+++ b/views/v_admin/posts/index.ejs
@@ -24,7 +24,7 @@
                 <td><%= hasil.status%> </td>
                 <td><%= hasil.allowComments %></td>
                 <td><%= hasil.body%></td>
-                <td><%= generateTime hasil.date 'MMMM Do YYYY' %></td>
+                <td><%= moment (hasil.date).fromNow() %></td>
                 <td><a href="/admin/posts/edit/<%= hasil.id %>" class="btn btn-info btn-sm">Edit</a> | 
                     <form action="/admin/posts/<%= hasil.id %>?_method=DELETE" method="POST">
                         <button type="submit" class="btn btn-danger btn-sm" >Delete</button>
