--- a/views/v_admin/posts/edit.ejs
+++ b/views/v_admin/posts/edit.ejs
@@ -8,7 +8,7 @@
                 </div>
                 <div class="form-group">
                         <label for="">Upload File</label>
-                        <input type="file" name="file" class="form-control" required>
+                        <input type="file" name="file" class="form-control">
                 </div>
                 <div class="form-group">
                         <label for="">Status</label>
