--- a/views/v_admin/posts/create.ejs
+++ b/views/v_admin/posts/create.ejs
@@ -15,6 +15,14 @@
                         <input type="file" name="file" class="form-control" required>
                 </div>
                 <div class="form-group">
+                        <label for="">Category</label>
+                        <select name="categories" id="" class="form-control" id="">
+                            <% categories.forEach(function(hasil){ %>
+                                <option value="<%= hasil.id %>"><%= hasil.name %></option>
+                            <% }); %>
+                        </select>
+                </div>
+                <div class="form-group">
                         <label for="">Status</label>
                         <select name="status" id="status" class="form-control" id="">
                             <option value="public">public</option>
