--- a/views/layouts/home/header.ejs
+++ b/views/layouts/home/header.ejs
@@ -59,5 +59,6 @@
           <div class="alert alert-info"><%= success %> </div>
         <% }); %> 
         <% error.forEach(function(error) { %>
-          <div class="alert alert-danger"><%= error.message %> </div>
+          <div class="alert alert-danger"><%= error %> </div>
         <% }); %> 
+         
