--- a/views/partials/admin/sidenav.ejs
+++ b/views/partials/admin/sidenav.ejs
@@ -134,7 +134,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+                  <i class="fa fa-user"><% if (user){ %><%= user.firstName %><% } %></i><i class="fa fa-fw fa-sign-out"></i>Logout</a>
             </li>
           </ul>
         </div>
