--- a/views/partials/admin/sidenav.ejs
+++ b/views/partials/admin/sidenav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="/">Home Page</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,10 +30,16 @@
             
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
               <a class="nav-link" href="/admin/categories">
-                <i class="fa fa-fw fa-link"></i>
+                <i class="fa fa-fw fa-facebook"></i>
                 <span class="nav-link-text">Categories</span>
               </a>
             </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
+                <a class="nav-link" href="/admin/comments">
+                  <i class="fa fa-fw fa-google"></i>
+                  <span class="nav-link-text">Comments</span>
+                </a>
+              </li>
           </ul>
           <ul class="navbar-nav sidenav-toggler">
             <li class="nav-item">
