--- a/views/v_home/post.ejs
+++ b/views/v_home/post.ejs
@@ -35,9 +35,10 @@
             <div class="card my-4">
                 <h5 class="card-header">Leave a Comment:</h5>
                 <div class="card-body">
-                <form>
+                <form action="/admin/comments" method="POST" >
                     <div class="form-group">
-                    <textarea class="form-control" rows="3"></textarea>
+                    <textarea name="body" class="form-control" rows="3"></textarea>
+                    <input type="text" hidden name="id" value="<%= posts.id %>">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
